bk_ida/gccida/g0/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10275:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10304:17: error: invalid suffix 'xmode' on integer constant
v4 = *(short *)0xmode; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10306:30: error: invalid suffix 'orce' on integer constant
v6 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10306:46: error: use of undeclared identifier 'machine_mode'
v6 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10306:6: error: use of undeclared identifier 'operand_sub'
v6 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10307:30: error: invalid suffix 'orce' on integer constant
v7 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10307:46: error: use of undeclared identifier 'machine_mode'
v7 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/expr.c:10307:6: error: use of undeclared identifier 'operand_sub'
v7 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
     ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_jump_by_parts_equality/src/obj/expr.o] Error 1
